Reformulation de la partie : schema de diffusion dans l'invariance par rotation

--- a/manuscrit_G_LEFEBVRE/annexe_schema_mixte_EFVF.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_schema_mixte_EFVF.tex
@@ -17,6 +17,11 @@
 où $F(\vecx)$ est une fonction source connue et où $k$ est une fonction continue. Pour des raisons pratiques, dans l'ensemble de cette annexe nous noterons $\Pi_i^j := \Pi(x_i,y_j)$ (pas de confusion possible avec un exposant traduisant un indice temporel, ici il n'y a pas de variations temporelles). Les ordonnées seront de la même manière notées en exposant pour toutes les quantités attachées à une maille $\mathcal{M}_i^j$.
 
 \section{Description de la méthode}
+Le principe de cette méthode mixte est le suivant. 
+Sur chaque maille~$\mathcal{M}_i^j$, une approximation par un polynôme~$\mathbb{Q}1$ est réalisée à partir des valeurs aux quatre coins de la maille. Le flux au travers du volume de contrôle est alors calculé comme l'intégrale sur le bord de ce volume, de la dérivée du polynôme. 
+
+
+Décrivons à présent plus en détail la méthode. 
 Plaçons nous dans un volume de contrôle $V_c$, maille du maillage dual.  La formulation volume fini donne alors~:
 \begin{equation}
 \int_{V_c} -\dive ( k \nabla \Pi(x,y) ) \dx\dy = \int_{V_c}F(x,y) \dx\dy.
@@ -238,5 +243,13 @@ Dans le cas particulier où $k\equiv1$ et où $\Delta x = \Delta y := h$ alors l
 \Leftrightarrow \dfrac{1}{4h^2} \Big[  & -\Pi_{i-1}^{j-1} -2 \Pi_i^{j-1} - \Pi_{i+1}^{j-1} - 2\Pi_{i-1}^j + 12 \Pi_i^j \\
 & \hspace{3cm} - 2\Pi_{i+1}^j - \Pi_{i-1}^{j+1} -2 \Pi_i^{j+1} - \Pi_{i+1}^{j+1} \Big]  = F_i^j \numberthis
 \end{align*}
-Le schéma présenté ici est donc équivalent à un schéma à 9 points, comme illustré sur la Figure~\ref{fig:schema_laplace_9pts_custom}.
+Le schéma présenté ici est donc équivalent à un schéma à 9 points, comme illustré sur la Figure~\ref{fig:schema_laplace_9pts_custom}, avec des poids différents des poids standards (comme utilisé dans~\ref{leveque2007finite}).
+
+\begin{figure}
+\subfloat[\label{fig:schema_laplace_9pts_classique}Schéma classique]{
+\resizebox{.49\textwidth}{!}{\input{tex_pictures/stencil_9pts_classique.tex}}}
+\subfloat[\label{fig:schema_laplace_9pts_custom}Autre schéma découlant d'une méthode mixte VF/EF présentée dans l'annexe annexe~\ref{chap:anx_methode_mixte_VFEF}]{
+\resizebox{.49\textwidth}{!}{\input{tex_pictures/stencil_9pts_custom.tex}}}
+\caption{\label{fig:schema_laplacien}Poids associés à chacun des points du stencil à 9 points de schémas discrétisant le laplacien ($h$ étant le pas d'espace, égal dans chaque direction).}
+\end{figure}
 \end{document}
